--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,15 @@ dependencies:
   # For using lottie animation
   lottie: ^2.7.0
 
+  # For Hive Database
+  hive: ^4.0.0-dev.2
+  isar_flutter_libs: ^4.0.0-dev.13
+
+  # For Accessing Storage Path
+  path_provider: ^2.1.1
+
+  get: ^4.6.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
